13/09/2007  Joe Chuma <chuma@triumf.ca>

	v4.2.8

	* modified src/Utilities/ExXML, src/Utilities/ExGlobals
	removed dependency on libxml2, now using wxXmlDocument, wxXmlNode

	* modified Command, FCN_adev, FCN_mean, FCN_gmean, FCN_rms, FCN_skew, FCN_stdev,
	CMD_get, CMD_read, CMD_scalar, CMD_set, FCN_date, FCN_time, GRA_axis, ExSpinCtrlD.h,
	ExSpinCtrlI.h, and ExColorCtrl.h  to comply with the latest gcc compiler.

17/08/2007  Joe Chuma <chuma@triumf.ca>

	v4.2.7

	* added src/wxForms/LegendPopup
	New context sensitive options.  If you right-click on a graph legend, a form
	pops up allowing you to modify aspects of the legend, such as position, size,
	frame colour, title colour, etc.

	* modified src/Utilities/ExGlobals
	New feature.  A command line beginning with the % character is now interpreted
	as a system command, e.g., %ls.  The output from the command will be displayed
	in the terminal window.
	
01/08/2007  Joe Chuma <chuma@triumf.ca>

	v4.2.6

	* added src/wxForms/TextPopup
	New context sensitive options.  If you right-click on a drawn text string,
	a form pops up allowing you to modify aspects of the text string, such as
	color, height, font, location, etc.

	* modified src/Commands/CMD_write
	Writing a text string to a file was writing gibberish instead, due to a
	unicode confusion.  This has been fixed.  Also, writing a scalar to a
	file was failing with a complaint that it wasn't a vector.  This has also
	been fixed.

27/07/2007  Joe Chuma <chuma@triumf.ca>

	v4.2.5

	* modified src/Graphics/GRA_window.cpp
	Fixed up replot for commensurate autoscaling.

	* added src/wxForms/CurvePopup, src/wxForms/ExColorCtrl,ExSpinCtrlD,ExSpinCtrlI.
	New context sensitive options.  If you right-click on a data curve on a graph,
	a form pops up allowing you to modify aspects of the curve, such as 
	histogram type, line type, line thickness, plotsymbol type, color, size, etc.
	
10/07/2007  Joe Chuma <chuma@triumf.ca>

	v4.2.4
